tests/diagnostics/expressions/method_calls/argument_type_mismatch/expect.txt
# exit: 1
input/main.lang0:10:22: error: argument 1 to 'plus' must be int64, got boolean
      return user.plus(true)
                       ^
